--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -7,6 +7,7 @@
 
 @import './components/navbar';
 @import './components/job';
+@import './components/form-filters';
 
 html {
     font-size: 62.5%;
